# m365server

./: .envtemplate  .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
m365client/: pyproject.toml
m365client/m365client/: __init__.py  date_table.py  date_table_test.py  http_client.py  main_test.py  parquet_utils.py  parquet_utils_test.py  server_interface.py  string_utils.py
m365client/m365client/graph/: analysis.py  graph_api.py  groups.py
m365client/m365client/graph/tests/: test_graph_analysis.py
m365client/m365client/handlers/: __init__.py  blob.py  blob_handler.py  bytes.py  concurrent.py  docx.py  embeddings.py  excel.py  markdown.py  parquet.py  pdf.py  powerpoint.py
m365client/m365client/powerbi/: bi_api.py
m365client/m365client/schemas/: __init__.py  storage_config.py
m365client/requirements/: requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
m365server/: Dockerfile  pyproject.toml  redis.conf  run.sh
m365server/m365server/: deps.py  main.py
m365server/m365server/api/: api.py
m365server/m365server/api/endpoints/: blob_storage.py
m365server/m365server/azure_interface/: __init__.py  auth.py  azure_blob_storage_manager.py  blob_client.py  blob_data_loader.py  configuration.py  container_manager.py  endpoints.py
m365server/m365server/azure_interface/blob_operations/: __init__.py  delete.py  download.py  interfaces.py  upload.py
m365server/m365server/azure_interface/tests/: blob_data_loader_test.py  test_blob_storage_manager.py
m365server/requirements/: requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
(+7 files in other folders)
